--- a/angular-project/src/app/component/home/home.component.html
+++ b/angular-project/src/app/component/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- <div style="margin-top: 100px;" class="home-container">
+<div style="margin-top: 100px;" class="home-container">
     <div class="welcome-section">
       <h1>Welcome to Our Learning Platform</h1>
       <p>Enhance your knowledge with our top courses.</p>
@@ -6,7 +6,7 @@
         <mat-icon>play_arrow</mat-icon> Start Learning
       </button>
     </div>
- <div>  -->
+ <div> 
     
 
      <!-- <div class="fullscreen-image">
