--- a/angular-project/src/app/component/home/home.component.css
+++ b/angular-project/src/app/component/home/home.component.css
@@ -1,4 +1,4 @@
-  /* .home-container {
+   .home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +34,7 @@
 
 
 
-  /* .fullscreen-image {
+   /* .fullscreen-image {
     position: fixed;
     top: 0;
     left: 0;
@@ -47,7 +47,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-  } */
+  } 
    
 
 .home-container {
@@ -62,6 +62,6 @@
 .background-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* מתיחה כך שהתמונה תתאים לכל המסך */
+    object-fit: cover; 
 }  
-  
+   */
